Fixed bug #46024 (stream_select() doesn't return the correct number)